fixing co-pilot suggested review comments